Committing the file

--- a/Web_ICP/ICP2/Source/index.html
+++ b/Web_ICP/ICP2/Source/index.html
@@ -3,13 +3,14 @@
   <meta charset="UTF-8">
   <title>Index</title>
 </head>
-<body>
-    <h2> Web ICP2</h2>
+<body style="background-color:powderblue;">
+   <center> <h1 >Web ICP2</h1> </center>
+    
     <p>Paragraph Tag</p>
 
-<h1>This is heading Example h1</h1>
-<h2>This is heading Example h2</h2>
-<h3>This is heading Example h3 with 
+<h1> h1 Example</h1>
+<h2> h2 Example</h2>
+<h3>h3 Example with 
     <span style="color:blue">span</span> tag</h3>
 
 <div class="myDiv">The following are <span style="color:red">unordered list</span> inside div
@@ -33,11 +34,12 @@
 
 <a href= "https://webfoundation.org/docs/2017/03/March-12-Letter.jpg"> 
 <img src="https://webfoundation.org/docs/2017/03/March-12-Letter.jpg"  
-alt="Web Image" width="500" height="600"></img></a>
+alt="Web Image" width="600" height="600"></img></a>
+</br>
 
 <video width="320" height="240" controls>
-    <source src="https://youtu.be/5IjXH8a1Oj8" type="video/mp4">
-    <source src="https://youtu.be/5IjXH8a1Oj8" type="video/ogg">
+    <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4">
+   
     
     Play the video
   </video>
